--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.6.2",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.5",
     "web-vitals": "^1.1.2"
